discussion/kv_engine/184517/184517_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus.

    ./mcstat --json 'threads details'
    {
      "details": {
        "89513": {
        "name": "memcached",
        "system": 110,
        "user": 1070
      },
    [... cut ...]

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-10 07:30:24.000000000
Message: 
Uploaded patch set 11.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-10 07:35:40.000000000
Message: 
Patch Set 11:

(2 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-10 07:49:46.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22396/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
            sigar::iterate_threads([&json, &pid](auto tid,
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:246:24: error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
                sigar::iterate_threads([&kvCollector](auto tid,
                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22396/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22396/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51733/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(246): error C2039: "iterate_threads": is not a member of "sigar" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51733/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43433/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43433/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1161/ : FAILURE

Compile error at [2023-01-10T07:36:02.056Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1161/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12117/ : FAILURE

Compile error at [2023-01-10T07:35:28.238Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12117/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23971/ : FAILURE

Compile error at [2023-01-10T07:41:12.718Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23971/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24440/ : FAILURE

Compile error at [2023-01-10T07:40:37.239Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24440/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25726/ : FAILURE

Compile error at [2023-01-10T07:34:51.259Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25726/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32860/ : FAILURE

Compile error at [2023-01-10T07:47:37.208Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:246:24:
error: no member named "iterate_threads" in namespace "sigar"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32860/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12204/ : FAILURE

Compile error at [2023-01-10T07:37:35.778Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/stats.cc:246:24:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12204/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24865/ : FAILURE

Compile error at [2023-01-10T07:37:38.181Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:612:20:
error: ?iterate_threads? is not a member of ?sigar?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24865/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22052/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2023-01-10 07:51:56.000000000
Message: 
Abandoned

linked with sigar
----------------------------------------------------------------------------------------------------------------------
